Set default deployment target and always verify.

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -6,3 +6,9 @@
 	# target = db:pg:
 	# registry = sqitch
 	# client = /usr/bin/psql 
+[target "flipr_test"]
+	uri = db:pg://postgres:123@localhost:5433/flipr_test
+[engine "pg"]
+	target = flipr_test
+[deploy]
+	verify = true
